--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <title>Video Streaming</title>
+    <title>VVVVideo Streaming</title>
   </head>
   <body>
-    <h1>Video Streaming</h1>
-    <img src="{{ url_for('static', filename='capture.jpg') }}">
+    <h1>VVVVideo Streaming</h1>
   </body>
 </html>
