feat: add camera init api and basic control api

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>VVVVideo Streaming</title>
+    <title>Streaming</title>
   </head>
   <body>
-    <h1>VVVVideo Streaming</h1>
+    <h1>Streami</h1>
   </body>
 </html>
