feat: camera view

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,30 +6,16 @@
  	<title>jsmpeg streaming</title>
  	<style type="text/css">
  		body {
- 			background: $ {
- 				BGCOLOR
- 			}
-
- 			;
- 			text-align: center;
- 			margin-top: 10%;
+ 			margin: 0 !important;
  		}
 
  		#videoCanvas {
 
  			/* Always stretch the canvas to 640x480, regardless of its
 			internal size. */
- 			width: $ {
- 				WIDTH
- 			}
+ 			width: 100vw !important;
 
- 			px;
-
- 			height: $ {
- 				HEIGHT
- 			}
-
- 			px;
+ 			height: 100vh !important;
  		}
  	</style>
  </head>
